* lua re-org part 2:   release config for luajit 2+

--- a/src/3rd party/NVTT/NVTT.vcxproj
+++ b/src/3rd party/NVTT/NVTT.vcxproj
@@ -270,6 +270,7 @@
       <OmitFramePointers>true</OmitFramePointers>
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
       <WholeProgramOptimization>true</WholeProgramOptimization>
+      <DisableSpecificWarnings>4005</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
