* restructured many features behind defines (see: build_config_defines.h) + added a layered sound system (see: build_config_defines.h) + added get_hud():UpdateActorMenu() which refreshes the inventory screen + added new spawn_loadout features to character descriptions spawn item system (see: alife_object.cpp) ~ made corrections to how ammo_type is drawn on UI (requires static_third_ammo in maingame[_16].xml) + engine call to _G.CALifeUpdateManager__on_before_change_level (required!) + engine call to inventory_upgrades.effect_upgrade_item (required!) - removed some unused testing game_object exports (is_explosive, is_script_zone, is_projector, is_missle, is_grenade, is_bottle, is_torch) + added game_object:set_bone_visible(string bone_name,bool visibility,bool recursive) + added game_object:bone_visible() bool + added game_object:get_luminocity() and game_object:get_luminocity_hemi() - removed game_object:is_actor_indoors() and is_npc_indoors replaced by above + added level.get_active_cam() and level.set_active_cam(number) = fixed game_object:has_upgrade(string) + added game_object:install_upgrade(string) + m_evaluator_name exposed outside DEBUG for better script logging + added FS():rescan_path(string) which toggles the flag to rescan the path when the game reloads which allows you to add new files and see the changes in-game without restarting application

--- a/src/Common.props
+++ b/src/Common.props
@@ -12,6 +12,7 @@
     <xrSdkDir>$(SolutionDir)..\sdk\</xrSdkDir>
     <xrGameDir>$(XRAY_16X_GAME)</xrGameDir>
     <xrGameBinDir>$(xrGameDir)bin\</xrGameBinDir>
+    <xr3rdPartyDir>$(SolutionDir)3rd party\</xr3rdPartyDir>
   </PropertyGroup>
   <PropertyGroup>
     <IncludePath>E:\STALKER\X-Ray Source\x_ray_1602_VS13\xray-16\src\3rd party;$(IncludePath)</IncludePath>
@@ -55,6 +56,10 @@
     </BuildMacro>
     <BuildMacro Include="xrGameBinDir">
       <Value>$(xrGameBinDir)</Value>
+      <EnvironmentVariable>true</EnvironmentVariable>
+    </BuildMacro>
+    <BuildMacro Include="xr3rdPartyDir">
+      <Value>$(xr3rdPartyDir)</Value>
       <EnvironmentVariable>true</EnvironmentVariable>
     </BuildMacro>
   </ItemGroup>
