--- a/src/xrCore/xrCoreStatic.vcxproj
+++ b/src/xrCore/xrCoreStatic.vcxproj
@@ -323,6 +323,7 @@
     </ClCompile>
     <ClCompile Include="stream_reader.cpp" />
     <ClCompile Include="string_concatenations.cpp" />
+    <ClCompile Include="Text\MbHelpers.cpp" />
     <ClCompile Include="Threading\ttapi.cpp" />
     <ClCompile Include="Threading\xrSyncronize.cpp" />
     <ClCompile Include="xrCore.cpp">
@@ -382,6 +383,10 @@
     <ClInclude Include="Coder.hpp" />
     <ClInclude Include="compression_ppmd_stream.h" />
     <ClInclude Include="compression_ppmd_stream_inline.h" />
+    <ClInclude Include="Containers\associative_vector.h" />
+    <ClInclude Include="Containers\associative_vector_compare_predicate.h" />
+    <ClInclude Include="Containers\associative_vector_compare_predicate_inline.h" />
+    <ClInclude Include="Containers\associative_vector_inline.h" />
     <ClInclude Include="cpuid.h" />
     <ClInclude Include="ELocatorAPI.h" />
     <ClInclude Include="fastdelegate.h" />
@@ -428,6 +433,7 @@
     <ClInclude Include="string_concatenations.h" />
     <ClInclude Include="string_concatenations_inline.h" />
     <ClInclude Include="SubAlloc.hpp" />
+    <ClInclude Include="Text\MbHelpers.h" />
     <ClInclude Include="Threading\ttapi.h" />
     <ClInclude Include="Threading\xrSyncronize.h" />
     <ClInclude Include="vector.h" />
