+ new game object exports (see wiki: https://github.com/revolucas/xray-16/wiki/List-of-Changes) phantom_set_enemy is_on_belt item_on_belt belt_count get_actor_max_weight set_actor_max_weight get_actor_max_walk_weight set_actor_max_walk_weight get_additional_max_weight set_additional_max_weight get_additional_max_walk_weight set_additional_max_walk_weight get_total_weight weight get_actor_jump_speed set_actor_jump_speed get_actor_sprint_koef set_actor_sprint_koef get_actor_run_coef set_actor_run_coef get_actor_runback_coef set_actor_runback_coef
+ ray_pick class export

+ linker option LargeAddressAware TRUE in global properties

* console command snd_cache_size upper limit increased to 64 (kb)
* console command snd_targets range set to 200 to 1000 (increase from 1 to 32)

--- a/src/Common.props
+++ b/src/Common.props
@@ -21,6 +21,9 @@
     <ClCompile>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
+    <Link>
+      <LargeAddressAware>true</LargeAddressAware>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <BuildMacro Include="xrBinRootDir">
