+ new game object exports phantom_set_enemy is_on_belt item_on_belt belt_count get_actor_max_weight set_actor_max_weight get_actor_max_walk_weight set_actor_max_walk_weight get_additional_max_weight set_additional_max_weight get_additional_max_walk_weight set_additional_max_walk_weight get_total_weight weight get_actor_jump_speed set_actor_jump_speed get_actor_sprint_koef set_actor_sprint_koef get_actor_run_coef set_actor_run_coef get_actor_runback_coef set_actor_runback_coef
+ ray_pick class export

* console command snd_cache_size upper limit increased to 64

--- a/src/xrGame/xrGame.vcxproj
+++ b/src/xrGame/xrGame.vcxproj
@@ -1115,6 +1115,7 @@
     <ClInclude Include="rat_state_base_inline.h" />
     <ClInclude Include="rat_state_manager.h" />
     <ClInclude Include="rat_state_manager_inline.h" />
+    <ClInclude Include="raypick.h" />
     <ClInclude Include="refreshable_obstacles_query.h" />
     <ClInclude Include="refreshable_obstacles_query_inline.h" />
     <ClInclude Include="RegistryFuncs.h" />
@@ -2831,6 +2832,7 @@
     <ClCompile Include="rat_states.cpp" />
     <ClCompile Include="rat_state_base.cpp" />
     <ClCompile Include="rat_state_manager.cpp" />
+    <ClCompile Include="raypick.cpp" />
     <ClCompile Include="RegistryFuncs.cpp" />
     <ClCompile Include="relation_registry.cpp" />
     <ClCompile Include="relation_registry_actions.cpp">
